--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -5,19 +5,8 @@
 @import 'tailwindcss/utilities';
 
 @responsive {
-  .text-huge-0 {
-    font-size: 2rem;
+  .text-huge {
+    font-size: 12.5rem;
   }
 
-  .text-huge-1 {
-      font-size:4rem;
-  }
-
-  .text-huge-2 {
-      font-size:10rem;
-  }
-
-  .text-huge-3 {
-      font-size:16rem
-  }
 }
